# SMARCH

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  knip.json  package-lock.json  package.json  sma.gen3.json  tsconfig.json  tsconfig.strict.json
.UltraVision/: 00-VISION.md  01-CURRENT-STATE.md  02-GAP-ANALYSIS.md  03-TARGET-ARCHITECTURE.md  04-DESIGN-LANGUAGE.md  05-MEDIA-PLAN.md  06-I18N-PLAN.md  07-PERFORMANCE-PLAN.md  08-QUALITY-RELEASE-PLAN.md  INDEX.md  modules.json
.claude-plugin/: marketplace.json  package.json  plugin.json
FEATMAP/: APP.md  README.md  SAIL.md  SPL.md
SAIL-v1/: FRAMEWORK.md
SPE/: SS-PerformanceEval.md
SRS/: P10-SRS-OBSERVABILITY.md  SECURITY.md
SSA-v2/: SS-Architecture-Boundary.md
SSI/: SS-Isolation.md
SSTF-v1/: FRAMEWORK.md
STF-v1/: FRAMEWORK.md
agent-skills/: README.md
docs/: ADOPTION_ROADMAP.md  AGENT_EVALS.md  AGENT_SKILLS.md  BRICK_METADATA.md  BUILD_LAYER_IMPLEMENTATION_PLAN.md  CANONICALIZATION_PLAYBOOK.md  CAPSULE_BRICKS.md  CODEX_INTEGRATION.md  CODE_QUALITY.md  COLOPHON.md  COMMANDS.md  COMPACT_BRICK_CARDS.md  COMPLIANCE-LAYER.md  CURATED_BUILD_ACCEPTANCE_DEFINITIONS.md  CURATED_BUILD_LIFECYCLE_PLAYBOOK.md  CURATED_BUILD_PRIVATE_PUBLISH_LANE.md  DASHBOARD.md  ENFORCEMENT.md  ENGINEERING_REVIEW_RESPONSE.md  FIRST_TIME_SETUP.md  FRAMEWORK.md  (+36 more)
rust-core/: Cargo.toml  PROTOCOL.md
rust-core/src/: hash.rs  lib.rs  main.rs  merkle.rs  sim.rs  walk.rs
rust-core/tests/: parity.rs
(+1073 files in other folders)
