[package]
name = "smarch-core"
version = "0.1.0"
edition = "2024"
description = "Optional native filesystem, hashing, similarity, and Merkle kernel for SMARCH"
license = "MIT"

[dependencies]
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

